--- a/style.scss
+++ b/style.scss
@@ -287,3 +287,12 @@ footer {
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
 @import "svg-icons";
+
+.highlighter-rouge {
+    color: #ce887b;
+    font-weight: 400;
+    border: 1px solid #607D8B;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    padding: 0.1rem 0.5rem;
+}
