--- a/style.scss
+++ b/style.scss
@@ -289,10 +289,11 @@ footer {
 @import "svg-icons";
 
 .highlighter-rouge {
-    color: #ce887b;
-    font-weight: 400;
-    border: 1px solid #607D8B;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    padding: 0.1rem 0.5rem;
+color: #532922;
+background-color: #98cfd6;
+font-weight: 400;
+border: none solid #607D8B;
+-webkit-border-radius: none;
+border-radius: none;
+padding: 0.1rem 0.5rem;
 }
